Fix #2075 Slow startup because of low entropy for PRNG (#2318)
* Fix hang-up due to blocking PRNG returned by SecureRandom.getInstanceStrong()
Fixes #2075

(cherry picked from commit 4ef35171a40eb0db9fde4eaf0c444c9a0baa331f)
Signed-off-by: Patrick Schmitt <Patrick.Schmitt@cpb-software.com>